2006-08-06  Nick Clifton  <nickc@redhat.com>

	PR binutils/3001
	* addr2line.c (process_file): Change function from void to
	returning an int.  Return 0 upon success, 1 otherwise.
	(main): Use return value from process_file as the exit value.
	* ar.c (ranlib_only):  Change function from void to returning an
	int.  Return 0 upon success, 1 otherwise.
	(ranlib_touch): Likewise.
	(main): Use return value from ranlib functions as exit value.
	* objcopy.c (add_specific_symbol): Set status to 1 if get_file_size
	fails.
	(copy_file): Likewise.
	(strip_main): Likewise.
	(copy_main): Likewise.
	* objdump.c (display_file): Set exit_status to 1 if get_file_size
	fails.
	* size.c (display_file): Set return_code to 1 if get_file_size
	fails.

2006-08-02  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>

	* readelf.c (dump_relocations): Handle MIPS-specific
	SHN_MIPS_SCOMMON and SHN_MIPS_SUNDEFINED. 
	(get_symbol_index_type): Similarly.

2006-07-24  Ralk Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/binutils.texinfo: Fix spelling mistakes.

2006-07-10  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (get_dynamic_type): Handle DT_GNU_HASH.
	(get_section_type_name): Handle SHT_GNU_HASH.
	(dynamic_info_DT_GNU_HASH): New variable.
	(process_dynamic_section): Handle DT_GNU_HASH.
	(process_symbol_table): Print also DT_GNU_HASH histogram.

2006-07-06  Mohammed Adnène Trojette  <adn@diwi.org>

	PR binutils/2879
	* doc/binutils.texi (Strings): Document -T shorthand for --target
	switch.
	* strings.c: Update comment to include -T option.

	PR binutils/2875
	* doc/binutils.texi (readelf): Fix spelling typo.

2006-06-30  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (display_debug_frames): Catch a corrupt length field
	generating an end of block address that is beyond the end of the
	section.
	When encountering a corrupt CIE pointer do not reset the start
	pointer as more data still has to be read.
	Do not warn about user defined call frame instructions.
